# formula_detection

./: Pipfile  README.md  pyproject.toml
docs/: Usage.ipynb  demo_helper.py  search_doc.md  vocabulary_doc.md
formula_detection/: candidate.py  cooccurrence.py  merge_bigrams.py  phrases.py  search.py  template.py  vocabulary.py
formula_detection/patterns/: pattern.py
hist_text_template/: context.py  cooccurrence.py  merge_bigrams.py  phrases.py  sentence.py  similarity.py  template.py  transitions.py
notebooks/: Context-Transition-Probabilities.ipynb  corpus_iterables.py  resolution_iterables.py  stabe_mapper.py
tests/: test_candidate.py  test_cooccurrence.py  test_merge.py  test_pattern.py  test_search.py  test_sentence.py  test_template.py  test_vocabulary.py
